# @copyright (c) 2022-present Skolkovo Institute of Science and Technology
#                              (Skoltech), Russia. All rights reserved.
#                2023-present Artificial Intelligence Research Institute
#                              (AIRI), Russia. All rights reserved.
#
# NNTile is software framework for fast training of big neural networks on
# distributed-memory heterogeneous systems based on StarPU runtime system.
#
# @file src/CMakeLists.txt
# Set NNTile sources to compile
#
# @version 1.1.0

add_subdirectory(kernel)

# Ignore kernel function in case of SimGrid simulation
if(HAVE_STARPU_SIMGRID)
    set(KERNEL_SRC)
else()
    # Set list of sources
    set(KERNEL_SRC
        "kernel/accumulate_maxsumexp/cpu.cc"
        "kernel/add_slice/cpu.cc"
        "kernel/add_slice3/cpu.cc"
        "kernel/add_fiber/cpu.cc"
        "kernel/prod_slice/cpu.cc"
        "kernel/prod_fiber/cpu.cc"
        "kernel/prod_fiber3/cpu.cc"
        "kernel/dgelu/cpu.cc"
        "kernel/dgelutanh/cpu.cc"
        "kernel/drelu/cpu.cc"
        "kernel/gelu/cpu.cc"
        "kernel/gelutanh/cpu.cc"
        "kernel/gelutanh_inplace/cpu.cc"
        "kernel/hypot/cpu.cc"
        "kernel/hypot_scalar_inverse/cpu.cc"
        "kernel/normalize/cpu.cc"
        "kernel/prod/cpu.cc"
        "kernel/prod_inplace/cpu.cc"
        "kernel/randn/cpu.cc"
        "kernel/relu/cpu.cc"
        "kernel/relu_forward/cpu.cc"
        "kernel/relu_backward/cpu.cc"
        "kernel/subcopy/cpu.cc"
        "kernel/sumnorm/cpu.cc"
        "kernel/fill/cpu.cc"
        "kernel/sum_slice/cpu.cc"
        "kernel/sum_fiber/cpu.cc"
        "kernel/norm_slice/cpu.cc"
        "kernel/pow/cpu.cc"
        "kernel/maxsumexp/cpu.cc"
        "kernel/softmax/cpu.cc"
        "kernel/softmax_inplace/cpu.cc"
        "kernel/sqrt/cpu.cc"
        "kernel/sqrt_inplace/cpu.cc"
        "kernel/maximum/cpu.cc"
        "kernel/addcdiv/cpu.cc"
        "kernel/sumprod_slice/cpu.cc"
        "kernel/sumprod_fiber/cpu.cc"
        "kernel/logsumexp/cpu.cc"
        "kernel/total_sum_accum/cpu.cc"
        "kernel/subtract_indexed_outputs/cpu.cc"
        "kernel/gelu_backward/cpu.cc"
        "kernel/gelutanh_backward/cpu.cc"
        "kernel/add/cpu.cc"
        "kernel/add_scalar/cpu.cc"
        "kernel/embedding/cpu.cc"
        "kernel/embedding_backward/cpu.cc"
        "kernel/mask_scalar/cpu.cc"
        "kernel/scal/cpu.cc"
        "kernel/adam_step/cpu.cc"
        "kernel/adamw_step/cpu.cc"
        "kernel/transpose/cpu.cc"
        "kernel/silu_forward/cpu.cc"
        "kernel/silu_backward/cpu.cc"
        "kernel/conv2d_inplace/cpu.cc"
        "kernel/conv2d_bwd_input_inplace/cpu.cc"
        "kernel/conv2d_bwd_weight_inplace/cpu.cc"
        "kernel/rope/cpu.cc"
        "kernel/rope_backward/cpu.cc"
        "kernel/norm_fiber/cpu.cc"
        )

    if(NNTILE_USE_CUDA)
        set(KERNEL_SRC
            ${KERNEL_SRC}
            "kernel/accumulate_maxsumexp/cuda.cu"
            "kernel/add/cuda.cu"
            "kernel/add_slice/cuda.cu"
            "kernel/add_slice3/cuda.cu"
            "kernel/add_fiber/cuda.cu"
            "kernel/prod_slice/cuda.cu"
            "kernel/prod_fiber/cuda.cu"
            "kernel/prod_fiber3/cuda.cu"
            "kernel/dgelu/cuda.cu"
            "kernel/dgelutanh/cuda.cu"
            "kernel/drelu/cuda.cu"
            "kernel/gelu/cuda.cu"
            "kernel/gelutanh/cuda.cu"
            "kernel/gelutanh_inplace/cuda.cu"
            "kernel/normalize/cuda.cu"
            "kernel/prod/cuda.cu"
            "kernel/prod_inplace/cuda.cu"
            "kernel/relu/cuda.cu"
            "kernel/relu_forward/cuda.cu"
            "kernel/sqrt/cuda.cu"
            "kernel/sqrt_inplace/cuda.cu"
            "kernel/addcdiv/cuda.cu"
            "kernel/relu_backward/cuda.cu"
            "kernel/sumnorm/cuda.cu"
            "kernel/fill/cuda.cu"
            "kernel/sum_slice/cuda.cu"
            "kernel/sum_fiber/cuda.cu"
            "kernel/logsumexp/cuda.cu"
            "kernel/norm_slice/cuda.cu"
            "kernel/pow/cuda.cu"
            "kernel/maxsumexp/cuda.cu"
            "kernel/softmax/cuda.cu"
            "kernel/softmax_inplace/cuda.cu"
            "kernel/sumprod_slice/cuda.cu"
            "kernel/sumprod_fiber/cuda.cu"
            "kernel/gelu_backward/cuda.cu"
            "kernel/gelutanh_backward/cuda.cu"
            #"kernel/fp32_to_fp16/cpu.cc"
            #"kernel/fp32_to_fp16/cuda.cu"
            #"kernel/fp16_to_fp32/cpu.cc"
            #"kernel/fp16_to_fp32/cuda.cu"
            "kernel/embedding/cuda.cu"
            "kernel/embedding_backward/cuda.cu"
            "kernel/mask_scalar/cuda.cu"
            "kernel/maximum/cuda.cu"
            "kernel/total_sum_accum/cuda.cu"
            "kernel/subtract_indexed_outputs/cuda.cu"
            "kernel/logsumexp/cuda.cu"
            "kernel/add_scalar/cuda.cu"
            "kernel/scal/cuda.cu"
            "kernel/hypot/cuda.cu"
            "kernel/hypot_scalar_inverse/cuda.cu"
            "kernel/adam_step/cuda.cu"
            "kernel/adamw_step/cuda.cu"
            "kernel/transpose/cuda.cu"
            "kernel/silu_forward/cuda.cu"
            "kernel/silu_backward/cuda.cu"
            "kernel/conv2d_inplace/cuda.cu"
            "kernel/conv2d_bwd_input_inplace/cuda.cu"
            "kernel/conv2d_bwd_weight_inplace/cuda.cu"
            "kernel/rope/cuda.cu"
            "kernel/rope_backward/cuda.cu"
            "kernel/norm_fiber/cuda.cu"
            )
        endif(NNTILE_USE_CUDA)
endif(HAVE_STARPU_SIMGRID)

set(STARPU_SRC
    "starpu/accumulate.cc"
    "starpu/accumulate_hypot.cc"
    "starpu/accumulate_maxsumexp.cc"
    "starpu/add_slice.cc"
    "starpu/add_slice3.cc"
    "starpu/add_fiber.cc"
    "starpu/prod_slice.cc"
    "starpu/prod_fiber.cc"
    "starpu/prod_fiber3.cc"
    "starpu/clear.cc"
    "starpu/copy.cc"
    "starpu/dgelu.cc"
    "starpu/dgelutanh.cc"
    "starpu/drelu.cc"
    "starpu/gemm.cc"
    "${CMAKE_CURRENT_BINARY_DIR}/starpu/axpy.cc"
    "${CMAKE_CURRENT_BINARY_DIR}/starpu/nrm2.cc"
    "${CMAKE_CURRENT_BINARY_DIR}/starpu/scal_inplace.cc"
    "starpu/gelu.cc"
    "starpu/gelutanh.cc"
    "starpu/gelutanh_inplace.cc"
    "starpu/hypot.cc"
    "starpu/hypot_scalar_inverse.cc"
    "starpu/normalize.cc"
    "starpu/prod.cc"
    "starpu/prod_inplace.cc"
    "starpu/randn.cc"
    "starpu/relu.cc"
    "starpu/relu_forward.cc"
    "starpu/relu_backward.cc"
    "starpu/subcopy.cc"
    "starpu/sumnorm.cc"
    "starpu/fill.cc"
    "starpu/sum_slice.cc"
    "starpu/sum_fiber.cc"
    "starpu/norm_slice.cc"
    "starpu/pow.cc"
    "starpu/maxsumexp.cc"
    "starpu/flash_maxsumexp.cc"
    "starpu/softmax.cc"
    "starpu/softmax_inplace.cc"
    "starpu/flash_softmax_gemm.cc"
    "starpu/flash_softmax_gemm_backward_sumprod_slice.cc"
    "starpu/flash_softmax_gemm_backward_dq_dk.cc"
    "starpu/sqrt.cc"
    "starpu/sqrt_inplace.cc"
    "starpu/maximum.cc"
    "starpu/addcdiv.cc"
    "starpu/sumprod_slice.cc"
    "starpu/sumprod_fiber.cc"
    "starpu/logsumexp.cc"
    "starpu/total_sum_accum.cc"
    "starpu/subtract_indexed_outputs.cc"
    "starpu/gelu_backward.cc"
    "starpu/gelutanh_backward.cc"
    "starpu/add.cc"
    "starpu/add_scalar.cc"
    "starpu/embedding.cc"
    "starpu/embedding_backward.cc"
    #"starpu/fp32_to_fp16.cc"
    #"starpu/fp16_to_fp32.cc"
    "starpu/mask_scalar.cc"
    "starpu/scal.cc"
    "starpu/adam_step.cc"
    "starpu/adamw_step.cc"
    "starpu/transpose.cc"
    "starpu/silu_forward.cc"
    "starpu/silu_backward.cc"
    "starpu/conv2d_inplace.cc"
    "starpu/conv2d_bwd_input_inplace.cc"
    "starpu/conv2d_bwd_weight_inplace.cc"
    "starpu/rope.cc"
    "starpu/rope_backward.cc"
    "starpu/norm_fiber.cc"
    )

set(TILE_SRC
    "tile/traits.cc"
    "tile/axpy.cc"
    "tile/add_slice.cc"
    "tile/add_slice3.cc"
    "tile/add_fiber.cc"
    "tile/prod_slice.cc"
    "tile/prod_fiber.cc"
    "tile/prod_fiber3.cc"
    "tile/clear.cc"
    "tile/copy.cc"
    "tile/copy_intersection.cc"
    "tile/dgelu.cc"
    "tile/dgelutanh.cc"
    "tile/drelu.cc"
    "tile/gemm.cc"
    "tile/gelu.cc"
    "tile/gelutanh.cc"
    "tile/gelutanh_inplace.cc"
    "tile/nrm2.cc"
    "tile/normalize.cc"
    "tile/prod_inplace.cc"
    "tile/randn.cc"
    "tile/relu.cc"
    "tile/relu_forward.cc"
    "tile/relu_backward.cc"
    "tile/sumnorm.cc"
    "tile/fill.cc"
    "tile/sum_slice.cc"
    "tile/sum_fiber.cc"
    "tile/norm_slice.cc"
    "tile/pow.cc"
    "tile/maxsumexp.cc"
    "tile/softmax.cc"
    "tile/softmax_inplace.cc"
    "tile/sqrt.cc"
    "tile/sqrt_inplace.cc"
    "tile/maximum.cc"
    "tile/addcdiv.cc"
    "tile/sumprod_slice.cc"
    "tile/sumprod_fiber.cc"
    "tile/logsumexp.cc"
    "tile/total_sum_accum.cc"
    "tile/subtract_indexed_outputs.cc"
    "tile/scal.cc"
    "tile/scal_inplace.cc"
    "tile/gelu_backward.cc"
    "tile/gelutanh_backward.cc"
    "tile/add.cc"
    "tile/add_scalar.cc"
    #"tile/fp32_to_fp16.cc"
    #"tile/fp16_to_fp32.cc"
    "tile/mask_scalar.cc"
    "tile/hypot.cc"
    "tile/adam_step.cc"
    "tile/adamw_step.cc"
    "tile/silu_forward.cc"
    "tile/silu_backward.cc"
    "tile/rope.cc"
    "tile/norm_fiber.cc"
    )

set(TENSOR_SRC
    "tensor/traits.cc"
    "tensor/distributions.cc"
    "tensor/axpy.cc"
    "tensor/add_slice.cc"
    "tensor/add_slice3.cc"
    "tensor/add_fiber.cc"
    "tensor/prod_slice.cc"
    "tensor/prod_fiber.cc"
    "tensor/prod_fiber3.cc"
    "tensor/clear.cc"
    "tensor/copy.cc"
    "tensor/copy_intersection.cc"
    "tensor/dgelu.cc"
    "tensor/dgelutanh.cc"
    "tensor/drelu.cc"
    "tensor/gather.cc"
    "tensor/gemm.cc"
    "tensor/gelu.cc"
    "tensor/gelutanh.cc"
    "tensor/gelutanh_inplace.cc"
    "tensor/nrm2.cc"
    "tensor/normalize.cc"
    "tensor/prod.cc"
    "tensor/prod_inplace.cc"
    "tensor/randn.cc"
    "tensor/relu.cc"
    "tensor/relu_forward.cc"
    "tensor/relu_backward.cc"
    "tensor/scatter.cc"
    "tensor/sumnorm.cc"
    "tensor/fill.cc"
    "tensor/sum_slice.cc"
    "tensor/sum_fiber.cc"
    "tensor/norm_slice.cc"
    "tensor/pow.cc"
    "tensor/flash_maxsumexp.cc"
    "tensor/maxsumexp.cc"
    "tensor/flash_softmax_gemm.cc"
    "tensor/flash_softmax_gemm_backward.cc"
    "tensor/softmax.cc"
    "tensor/softmax_inplace.cc"
    "tensor/sqrt.cc"
    "tensor/sqrt_inplace.cc"
    "tensor/maximum.cc"
    "tensor/addcdiv.cc"
    "tensor/sumprod_slice.cc"
    "tensor/sumprod_fiber.cc"
    "tensor/logsumexp.cc"
    "tensor/total_sum_accum.cc"
    "tensor/subtract_indexed_outputs.cc"
    "tensor/scal.cc"
    "tensor/scal_inplace.cc"
    "tensor/gelu_backward.cc"
    "tensor/gelutanh_backward.cc"
    "tensor/add.cc"
    "tensor/add_scalar.cc"
    "tensor/embedding.cc"
    "tensor/embedding_backward.cc"
    #"tensor/fp32_to_fp16.cc"
    #"tensor/fp16_to_fp32.cc"
    "tensor/mask_scalar.cc"
    "tensor/hypot.cc"
    "tensor/hypot_scalar_inverse.cc"
    "tensor/adam_step.cc"
    "tensor/adamw_step.cc"
    "tensor/transpose.cc"
    "tensor/silu_forward.cc"
    "tensor/silu_backward.cc"
    "tensor/conv2d_inplace.cc"
    "tensor/conv2d_bwd_input_inplace.cc"
    "tensor/conv2d_bwd_weight_inplace.cc"
    "tensor/rope.cc"
    "tensor/rope_backward.cc"
    "tensor/norm_fiber.cc"
    )

set(LAYER_SRC
    #"layer/gelu.cc"
    #"layer/gelutanh.cc"
    #"layer/linear.cc"
    #"layer/mlp.cc"
    )

set(MODEL_SRC
    #"model/deep_linear.cc"
    )

set(OPTIMIZER_SRC
    # "optimizer/sgd.cc"
    )

set(LOGGER_SRC
    "logger/logger_thread.cc"
    "logger/websocket_client.cc"
    )

set(SRC ${KERNEL_SRC} ${STARPU_SRC} ${TILE_SRC} ${TENSOR_SRC}
    ${LOGGER_SRC})
    #${LAYER_SRC} ${MODEL_SRC} ${OPTIMIZER_SRC})

target_sources(nntile PRIVATE ${SRC})
