[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nntile-tgbot"
version = "0.1.0"
description = "Telegram bot front-end for the nntile-gateway HTTP API."
license = {text = "MIT"}
authors = [
    {name = "NNTile Contributors"},
]
requires-python = ">=3.10,<4"
dependencies = [
    "aiogram>=3.7,<4",
    "httpx>=0.27",
    "pydantic>=2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[project.scripts]
nntile-tgbot = "nntile_tgbot.__main__:main"

[tool.setuptools.packages.find]
where = "."
include = ["nntile_tgbot*"]

[tool.pytest.ini_options]
minversion = "8.2"
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
